--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,10 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-32.png" />
 	<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-48.png" />
 	<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-64.png" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+		rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	%sveltekit.head%
 </head>
