feat(homepage): complete implementation
closes #19

--- a/apps/main/src/app.html
+++ b/apps/main/src/app.html
@@ -9,8 +9,11 @@
 	<link rel="icon" type="image/png" sizes="64x64" href="%sveltekit.assets%/favicon-64.png" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@0;1&display=swap" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&family=IM+Fell+English:ital@0;1&display=swap"
+		rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Cameron Ball</title>
 	%sveltekit.head%
 </head>
 
